--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
+/* within body, sets background color and font.*/
+body {
+  background-color: #f1f1f1;
+  padding: 20px;
+  font-family: Arial;
+
 /* Centers Website */
 .main {
   max-width: 1000px;
   margin: auto;
 }
+
