--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,23 @@ body {
   margin: auto;
 }
 
-.content {
-  max-width: 100px;
+h1 {
+  font-size: 50px;
+  word-break: break-all;
+}
+
+.row {
+  margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+/* Create four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 25%;
 }
