add .content, .column, .row. It will clear floats after rows, makes a two column layout instead of four columns

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,26 @@ h1 {
   float: left;
   width: 25%;
 }
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.content {
+  background-color: white;
+  padding: 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .column {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
